# kaam25

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.github/workflows/: ci.yml
apps/desktop/: .env.production  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: api-client.ts  auth-client.ts
apps/server/: .dockerignore  Dockerfile  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json
apps/server/src/: app.ts  index.ts
apps/server/src/config/: env.ts
apps/server/src/db/migrations/: 0002_optimal_silvermane.sql  0003_ambiguous_james_howlett.sql  0004_harsh_rafael_vega.sql
apps/server/src/db/schema/: auth.ts  index.ts  organization.ts  projects.ts  (+1 more)
apps/server/src/lib/: auth.ts  db.ts  logger.ts  workspace-access.ts
apps/server/src/middleware/: error-handler.ts
apps/server/src/plugins/: cors.ts  helmet.ts
apps/server/src/routes/: auth.ts  health.ts  projects.ts  tasks.ts
apps/web/: .env.example  eslint.config.js  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: navbar.tsx  redirect-if-authed.tsx  require-auth.tsx  require-workspace.tsx
apps/web/src/lib/: api-client.ts  auth-client.ts
docs/: architecture.md  setup.md
scripts/: setup.ps1
(+11 files in other folders)
