[package]
name = "kaam25-desktop"
version = "0.1.0"
description = "Kaam 25 desktop companion"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "kaam25-desktop"
path = "src/main.rs"
